fix: change hover color and footer

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,7 @@
   --maincolor: #50fa7b;
   --bordercl: rebeccapurple;
   --callouctcolor: dodgerblue;
-  --hovercolor: navy;
+  --hovercolor: #50fa7b;
   --darkMaincolor: #50fa7b;
 }
 html {
