--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,10 +1,10 @@
 <footer>
   <div style="display: flex">
     {{- range $index, $key := .Site.Params.Social -}}
-    <a class="soc" href="{{ $key.url }}" title="{{ $key.name }}"
+    <a href="{{ $key.url }}" title="{{ $key.name }}"
       ><i data-feather="{{ $key.icon }}"></i
     ></a>
-    {{- end -}}
+    | {{- end -}}
   </div>
   <div class="footer-info">
     {{ dateFormat "2006" now }} {{ with .Site.Copyright }} {{ . }} | {{ end }}
