--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,8 +7,8 @@
     | {{- end -}}
   </div>
   <div class="footer-info">
-    &nbsp {{ dateFormat "2006" now }} {{ with .Site.Copyright }} {{ . }} | {{
-    end }}
+    &nbsp{{ dateFormat "2006" now }} {{ with .Site.Copyright }} {{ . }} | {{ end
+    }}
   </div>
 </footer>
 {{ if not .Site.IsServer }} {{ template "_internal/google_analytics_async.html"
