feat: added support ribbon style

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <div>Hello World</div>
+  <div class="support-ribbon">Hello World</div>
   {{ partial "header.html" . }}
   <body>
     <div class="content">
