--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -350,3 +350,10 @@ table td {
   padding: 6px 13px;
   border: 1px solid #dfe2e5;
 }
+
+support-ribbon {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 1em 0;
+}
