--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -351,7 +351,7 @@ table td {
   border: 1px solid #dfe2e5;
 }
 
-support-ribbon {
+.support-ribbon {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
