added support palestine message

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <div class="support-ribbon">Hello World</div>
+  <div class="support-ribbon">🇵🇸 Freedom for Palestine 🇵🇸</div>
   {{ partial "header.html" . }}
   <body>
     <div class="content">
