feat: change to palestine flag colors

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,3 +1,4 @@
+<div class="support-ribbon">🕊️🇵🇸 I stand with humanity, I stand with Palestine 🇵🇸🕊️</div>
 <header>
   <div class="main">
     <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
