--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -29,5 +29,19 @@
 			{{ end }}
 		</div>
 	</article>
+	<script src="https://giscus.app/client.js"
+        data-repo="ghamza-blog/ghamza-blog.github.io"
+        data-repo-id="R_kgDOHMIi9w"
+        data-category-id="DIC_kwDOHMIi984COoB4"
+        data-mapping="url"
+        data-reactions-enabled="1"
+        data-emit-metadata="1"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="en"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+</script>
 </main>
 {{ end }}
