fix: removed static files

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -13,10 +13,10 @@
 	<link rel="icon" type="image/png" href={{ .Site.Params.favicon }} />
 	{{- end -}}
 
-	<link rel="apple-touch-icon" sizes="180x180" href="https://static.ghamza.dev/icons/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="https://static.ghamza.dev/icons/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="https://static.ghamza.dev/icons/favicon-16x16.png">
-	<link rel="manifest" href="https://static.ghamza.dev/icons/site.webmanifest">
+	<link rel="apple-touch-icon" sizes="180x180" href="https://static.ghamza.dev/support-icons/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://static.ghamza.dev/support-icons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="https://static.ghamza.dev/support-icons/favicon-16x16.png">
+	<link rel="manifest" href="https://static.ghamza.dev/support-icons/site.webmanifest">
 	
 	{{- if isset .Site.Params "gtag_key" -}}
 	<script async src="https://www.googletagmanager.com/gtag/js?id={{ .Site.Params.gtag_key }}"></script>
