--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -9,14 +9,18 @@
 	<title>{{ $title }} - {{ $siteTitle }}</title>
 	{{- end -}}
 
-	{{- if isset .Site.Params "favicon" -}}
-	<link rel="icon" type="image/png" href={{ .Site.Params.favicon }} />
+	{{- if isset .Site.Params.favicon "apple_touch_icon" -}}
+	<link rel="apple-touch-icon" sizes="180x180" href={{ .Site.Params.favicon.apple_touch_icon }}>
 	{{- end -}}
-
-	<link rel="apple-touch-icon" sizes="180x180" href="https://static.ghamza.dev/support-icons/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="https://static.ghamza.dev/support-icons/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="https://static.ghamza.dev/support-icons/favicon-16x16.png">
-	<link rel="manifest" href="https://static.ghamza.dev/support-icons/site.webmanifest">
+	{{- if isset .Site.Params.favicon "s32" -}}
+	<link rel="icon" type="image/png" sizes="32x32" href={{ .Site.Params.favicon.s32 }}>
+	{{- end -}}
+	{{- if isset .Site.Params.favicon "s16" -}}
+	<link rel="icon" type="image/png" sizes="16x16" href={{ .Site.Params.favicon.s16 }}>
+	{{- end -}}
+	{{- if isset .Site.Params.favicon "manifest" -}}
+	<link rel="manifest" href={{ .Site.Params.favicon.manifest }}>
+	{{- end -}}
 	
 	{{- if isset .Site.Params "gtag_key" -}}
 	<script async src="https://www.googletagmanager.com/gtag/js?id={{ .Site.Params.gtag_key }}"></script>
